feature/spec_table : subject spec table added + section tag for readability

--- a/pages/day00.html
+++ b/pages/day00.html
@@ -83,138 +83,285 @@
       <main class="layout__content">
         <div class="content__frame">
           <h2 class="content__head xxxlarge text-bold">DAY00</h2>
-          <h3 class="content__subhead xlarge text-bold">기본 규칙</h3>
-          <ul class="content__list">
-            <li>오직 이 페이지만 참고해야 합니다. 소문은 믿지 마세요.</li>
-            <li>파일 제출 전에 이 문서가 변경될 수도 있으니 주의하세요!</li>
-            <li>모든 과제물을 제출할 때는 제출 절차를 따라야 합니다.</li>
-            <li>제출하신 과제물은 동료들끼리 서로 확인하고 평가하게 됩니다.</li>
-            <li>
-              Exercise는 난이도에 따라 쉬운 문제에서 어려운 문제 순으로 짜여
-              있습니다. 앞 단 계 문제의 과제물이 완벽하게 작동하지 않으면
-              난이도가 더 높은 문제는 아무리 잘 완료했다 하더라도 평가에
-              반영되지 않습니다.
-            </li>
-            <li>
-              모든 HTML 파일은
-              <a
-                class="text-underline text-bold"
-                href="https://validator.w3.org/"
-                >W3 Validator</a
-              >
-              을 통과해야 합니다.
-            </li>
-            <li>meta 태그의 author에는 본인의 intra ID를 기입해야만 합니다.</li>
-            <li>
-              사용이 금지된 HTML 태그를 사용하는 것은 부정 행위로 간주됩니다.
-              부정 행위는 -42점을 받게 되며, 받은 점수는 절대 조정이
-              불가능합니다.
-            </li>
-            <li>어떠한 형태로든 JavaScript의 사용을 금지합니다.</li>
-            <li>페이지가 열리지 않으면 0점을 받게 됩니다.</li>
-            <li>
-              각 Exercise에서 정한 파일 이외의 어떠한 파일도 디렉토리에 남겨
-              두어서는 안 됩니다.
-            </li>
-            <li>
-              질문이 있으신가요? 오른쪽 동료에게 물어보세요. 아니면 왼쪽
-              동료에게 물어보세요.
-            </li>
-            <li>참고 가이드는 Google...그리고 Google 입니다.</li>
-            <li>
-              예시를 꼼꼼히 살펴보세요. Exercise에서 명시적으로 언급되지 않은
-              세부적인 사항에 대한 힌트를 얻을 수도 있습니다.
-            </li>
-            <li>다같이 한번 외쳐볼까요? "Chick to Chicken~"</li>
-          </ul>
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">기본 규칙</h3>
+            <ul class="content__list">
+              <li>오직 이 페이지만 참고해야 합니다. 소문은 믿지 마세요.</li>
+              <li>파일 제출 전에 이 문서가 변경될 수도 있으니 주의하세요!</li>
+              <li>모든 과제물을 제출할 때는 제출 절차를 따라야 합니다.</li>
+              <li>
+                제출하신 과제물은 동료들끼리 서로 확인하고 평가하게 됩니다.
+              </li>
+              <li>
+                Exercise는 난이도에 따라 쉬운 문제에서 어려운 문제 순으로 짜여
+                있습니다. 앞 단 계 문제의 과제물이 완벽하게 작동하지 않으면
+                난이도가 더 높은 문제는 아무리 잘 완료했다 하더라도 평가에
+                반영되지 않습니다.
+              </li>
+              <li>
+                모든 HTML 파일은
+                <a
+                  class="text-underline text-bold"
+                  href="https://validator.w3.org/"
+                  >W3 Validator</a
+                >
+                을 통과해야 합니다.
+              </li>
+              <li>
+                meta 태그의 author에는 본인의 intra ID를 기입해야만 합니다.
+              </li>
+              <li>
+                사용이 금지된 HTML 태그를 사용하는 것은 부정 행위로 간주됩니다.
+                부정 행위는 -42점을 받게 되며, 받은 점수는 절대 조정이
+                불가능합니다.
+              </li>
+              <li>어떠한 형태로든 JavaScript의 사용을 금지합니다.</li>
+              <li>페이지가 열리지 않으면 0점을 받게 됩니다.</li>
+              <li>
+                각 Exercise에서 정한 파일 이외의 어떠한 파일도 디렉토리에 남겨
+                두어서는 안 됩니다.
+              </li>
+              <li>
+                질문이 있으신가요? 오른쪽 동료에게 물어보세요. 아니면 왼쪽
+                동료에게 물어보세요.
+              </li>
+              <li>참고 가이드는 Google...그리고 Google 입니다.</li>
+              <li>
+                예시를 꼼꼼히 살펴보세요. Exercise에서 명시적으로 언급되지 않은
+                세부적인 사항에 대한 힌트를 얻을 수도 있습니다.
+              </li>
+              <li>다같이 한번 외쳐볼까요? "Chick to Chicken~"</li>
+            </ul>
+          </section>
+
           <hr class="horiz-divider" />
-          <h3 class="content__subhead xlarge text-bold">Foreword</h3>
-          <p class="content__para">
-            등촌 칼국수 참 맛있죠. 지금 이 subject를 작성하고 있는 우리도
-            든든하게 먹었습니다. 등촌에서 미나리와 버섯이 무한리필이라는 점 알고
-            계셨나요? 웅~치킨 🍗 우리는 치킨 이미지를
-            <a class="text-underline text-bold" href="https://pixabay.com/ko/"
-              >여기</a
-            >에서 찾곤 합니다.
-          </p>
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">Foreword</h3>
+            <p class="content__para">
+              등촌 칼국수 참 맛있죠. 지금 이 subject를 작성하고 있는 우리도
+              든든하게 먹었습니다. 등촌에서 미나리와 버섯이 무한리필이라는 점
+              알고 계셨나요? 웅~치킨 🍗 우리는 치킨 이미지를
+              <a class="text-underline text-bold" href="https://pixabay.com/ko/"
+                >여기</a
+              >에서 찾곤 합니다.
+            </p>
+            <hr class="horiz-divider" />
+            <h3 class="content__subhead xlarge text-bold">
+              Exercise 00 : Hello World!
+            </h3>
+            <table class="content__table">
+              <thead class="content__table--thead text-bold">
+                <tr class="content__table--tr">
+                  <th>Exercise 00</th>
+                </tr>
+              </thead>
+              <tbody class="content__table--tbody">
+                <tr class="content__table--tr content__table--ex-name">
+                  <td class="content__table--td">Hello World!</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 디렉토리 : ex00/</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 파일 : index.html</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">허용 태그 : NONE</td>
+                </tr>
+              </tbody>
+            </table>
+            <ul class="content__list">
+              <li>"Hello World!"를 페이지에 출력하세요.</li>
+            </ul>
+          </section>
+
           <hr class="horiz-divider" />
-          <h3 class="content__subhead xlarge text-bold">
-            Exercise 00 : Hello World!
-          </h3>
-          <ul class="content__list">
-            <li>제출 디렉토리: ex00/</li>
-            <li>제출 파일: index.html</li>
-            <li>허용 태그: NONE</li>
-            <li>"Hello World!"를 페이지에 출력하세요.</li>
-          </ul>
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">
+              Exercise 01 : Hellooooooo Worldddddddd!!!
+            </h3>
+            <table class="content__table">
+              <thead class="content__table--thead text-bold">
+                <tr class="content__table--tr">
+                  <th>Exercise 01</th>
+                </tr>
+              </thead>
+              <tbody class="content__table--tbody">
+                <tr class="content__table--tr content__table--ex-name">
+                  <td class="content__table--td">
+                    Hellooooooo Worldddddddd!!!
+                  </td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 디렉토리 : ex01/</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 파일 : index.html</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">
+                    허용 태그 : span, h1, h2, h3, h4, h5, h6
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <ul class="content__list">
+              <li>아래와 같이 페이지에 출력하세요.</li>
+            </ul>
+            <img class="content__img" src="../assets/day00/ex01.png" />
+          </section>
           <hr class="horiz-divider" />
-          <h3 class="content__subhead xlarge text-bold">
-            Exercise 01 : Hellooooooo Worldddddddd!!!
-          </h3>
-          <ul class="content__list">
-            <li>제출 디렉토리: ex01/</li>
-            <li>제출 파일: index.html</li>
-            <li>허용 태그: span, h1...h6</li>
-            <li>아래와 같이 페이지에 출력하세요.</li>
-          </ul>
-          <img class="content__img" src="../assets/day00/ex01.png" />
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">
+              Exercise 02 : Chick-to-Chicken
+            </h3>
+            <table class="content__table">
+              <thead class="content__table--thead text-bold">
+                <tr class="content__table--tr">
+                  <th>Exercise 02</th>
+                </tr>
+              </thead>
+              <tbody class="content__table--tbody">
+                <tr class="content__table--tr content__table--ex-name">
+                  <td class="content__table--td">Chick-to-Chicken</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 디렉토리 : ex02/</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 파일 : index.html</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">허용 태그 : span, p, img</td>
+                </tr>
+              </tbody>
+            </table>
+            <ul class="content__list">
+              <li>아래와 같이 페이지에 출력하세요.</li>
+            </ul>
+            <img class="content__img" src="../assets/day00/ex02.png" />
+          </section>
+
           <hr class="horiz-divider" />
-          <h3 class="content__subhead xlarge text-bold">
-            Exercise 02 : Chick-to-Chicken
-          </h3>
-          <ul class="content__list">
-            <li>제출 디렉토리: ex02/</li>
-            <li>제출 파일: index.html</li>
-            <li>허용 태그: span, p, img</li>
-            <li>아래와 같이 페이지에 출력하세요.</li>
-          </ul>
-          <img class="content__img" src="../assets/day00/ex02.png" />
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">
+              Exercise 03 : Let me introduce myself...
+            </h3>
+            <table class="content__table">
+              <thead class="content__table--thead text-bold">
+                <tr class="content__table--tr">
+                  <th>Exercise 03</th>
+                </tr>
+              </thead>
+              <tbody class="content__table--tbody">
+                <tr class="content__table--tr content__table--ex-name">
+                  <td class="content__table--td">Let me introduce myself...</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 디렉토리 : ex03/</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 파일 : index.html</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">
+                    허용 태그 : a, form, div, label, span, input
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <ul class="content__list">
+              <li>이 웹사이트는 한국어로 되어있습니다.</li>
+              <li>이 웹사이트의 제목은 "My First Website" 입니다.</li>
+              <li>
+                42 intra 글자를 클릭하면 새 창에서 https://intra.42.fr 이
+                열립니다.
+              </li>
+              <li>아래와 같이 페이지에 출력하세요.</li>
+            </ul>
+            <img class="content__img" src="../assets/day00/ex03.png" />
+          </section>
+
           <hr class="horiz-divider" />
-          <h3 class="content__subhead xlarge text-bold">
-            Exercise 03 : Let me introduce myself...
-          </h3>
-          <ul class="content__list">
-            <li>제출 디렉토리: ex03/</li>
-            <li>제출 파일: index.html</li>
-            <li>허용 태그: a, form, div, label, span, input</li>
-            <li>이 웹사이트는 한국어로 되어있습니다.</li>
-            <li>이 웹사이트의 제목은 "My First Website" 입니다.</li>
-            <li>
-              42 intra 글자를 클릭하면 새 창에서 https://intra.42.fr 이
-              열립니다.
-            </li>
-            <li>아래와 같이 페이지에 출력하세요.</li>
-          </ul>
-          <img class="content__img" src="../assets/day00/ex03.png" />
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">
+              Exercise 04 : Welcome to 42
+            </h3>
+            <table class="content__table">
+              <thead class="content__table--thead text-bold">
+                <tr class="content__table--tr">
+                  <th>Exercise 04</th>
+                </tr>
+              </thead>
+              <tbody class="content__table--tbody">
+                <tr class="content__table--tr content__table--ex-name">
+                  <td class="content__table--td">Welcome to 42</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 디렉토리 : ex04/</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 파일 : index.html</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">
+                    허용 태그 : h2, table, thead, th, tbody, td, tfoot, ol, li,
+                    ul
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <ul class="content__list">
+              <li>Inline style을 사용하세요.</li>
+              <li>아래와 같이 페이지에 출력하세요.</li>
+            </ul>
+            <img class="content__img" src="../assets/day00/ex04.png" />
+          </section>
+
           <hr class="horiz-divider" />
-          <h3 class="content__subhead xlarge text-bold">
-            Exercise 04 : Welcome to 42
-          </h3>
-          <ul class="content__list">
-            <li>제출 디렉토리: ex04/</li>
-            <li>제출 파일: index.html</li>
-            <li>
-              허용 태그: h2, table, thead, th, tbody, td, tfoot, ol, li, ul
-            </li>
-            <li>Inline style을 사용하세요.</li>
-            <li>아래와 같이 페이지에 출력하세요.</li>
-          </ul>
-          <img class="content__img" src="../assets/day00/ex04.png" />
-          <hr class="horiz-divider" />
-          <h3 class="content__subhead xlarge text-bold">
-            Exercise 05 : Beautiful Star
-          </h3>
-          <ul class="content__list">
-            <li>제출 디렉토리: ex05/</li>
-            <li>제출 파일: index.html</li>
-            <li>허용 태그: img, map, area</li>
-            <li>
-              별의 다섯 꼭짓점을 클릭하면 다른 페이지로 이동하는 페이지를
-              만드세요.
-            </li>
-            <li>이때, 각각의 페이지는 ex00 ~ ex04의 index.html 입니다.</li>
-          </ul>
-          <img class="content__img" src="../assets/day00/ex05.png" />
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">
+              Exercise 05 : Beautiful Star
+            </h3>
+            <table class="content__table">
+              <thead class="content__table--thead text-bold">
+                <tr class="content__table--tr">
+                  <th>Exercise 05</th>
+                </tr>
+              </thead>
+              <tbody class="content__table--tbody">
+                <tr class="content__table--tr content__table--ex-name">
+                  <td class="content__table--td">Beautiful Star</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 디렉토리 : ex05/</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 파일 : index.html</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">허용 태그 : img, map, area</td>
+                </tr>
+              </tbody>
+            </table>
+            <ul class="content__list">
+              <li>제출 디렉토리: ex05/</li>
+              <li>제출 파일: index.html</li>
+              <li>허용 태그: img, map, area</li>
+              <li>
+                별의 다섯 꼭짓점을 클릭하면 다른 페이지로 이동하는 페이지를
+                만드세요.
+              </li>
+              <li>이때, 각각의 페이지는 ex00 ~ ex04의 index.html 입니다.</li>
+            </ul>
+            <img class="content__img" src="../assets/day00/ex05.png" />
+          </section>
         </div>
       </main>
 
