--- a/pages/guideline.html
+++ b/pages/guideline.html
@@ -81,189 +81,212 @@
       <main class="layout__content">
         <div class="content__frame">
           <h2 class="content__head xxxlarge text-bold">Guideline</h2>
-          <h3 class="content__subhead xlarge text-bold">기본 규칙</h3>
-          <ul class="content__list">
-            <li>오직 이 페이지만 참고해야 합니다. 소문은 믿지 마세요.</li>
-            <li>파일 제출 전에 이 문서가 변경될 수도 있으니 주의하세요!</li>
-            <li>모든 과제물을 제출할 때는 제출 절차를 따라야 합니다.</li>
-            <li>제출하신 과제물은 동료들끼리 서로 확인하고 평가하게 됩니다.</li>
-            <li>
-              Exercise는 난이도에 따라 쉬운 문제에서 어려운 문제 순으로 짜여
-              있습니다. 앞 단 계 문제의 과제물이 완벽하게 작동하지 않으면
-              난이도가 더 높은 문제는 아무리 잘 완료했다 하더라도 평가에
-              반영되지 않습니다.
-            </li>
-            <li>
-              모든 HTML 파일은
-              <a
-                class="text-underline text-bold"
-                href="https://validator.w3.org/"
-                >W3 Validator</a
-              >
-              을 통과해야 합니다.
-            </li>
-            <li>meta 태그의 author에는 본인의 intra ID를 기입해야만 합니다.</li>
-            <li>
-              사용이 금지된 HTML 태그를 사용하는 것은 부정 행위로 간주됩니다.
-              부정 행위는 -42점을 받게 되며, 받은 점수는 절대 조정이
-              불가능합니다.
-            </li>
-            <li>어떠한 형태로든 JavaScript의 사용을 금지합니다.</li>
-            <li>페이지가 열리지 않으면 0점을 받게 됩니다.</li>
-            <li>
-              각 Exercise에서 정한 파일 이외의 어떠한 파일도 디렉토리에 남겨
-              두어서는 안 됩니다.
-            </li>
-            <li>
-              질문이 있으신가요? 오른쪽 동료에게 물어보세요. 아니면 왼쪽
-              동료에게 물어보세요.
-            </li>
-            <li>참고 가이드는 Google...그리고 Google 입니다.</li>
-            <li>
-              예시를 꼼꼼히 살펴보세요. Exercise에서 명시적으로 언급되지 않은
-              세부적인 사항에 대한 힌트를 얻을 수도 있습니다.
-            </li>
-            <li>다같이 한번 외쳐볼까요? "Chick to Chicken~"</li>
-          </ul>
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">기본 규칙</h3>
+            <ul class="content__list">
+              <li>오직 이 페이지만 참고해야 합니다. 소문은 믿지 마세요.</li>
+              <li>파일 제출 전에 이 문서가 변경될 수도 있으니 주의하세요!</li>
+              <li>모든 과제물을 제출할 때는 제출 절차를 따라야 합니다.</li>
+              <li>
+                제출하신 과제물은 동료들끼리 서로 확인하고 평가하게 됩니다.
+              </li>
+              <li>
+                Exercise는 난이도에 따라 쉬운 문제에서 어려운 문제 순으로 짜여
+                있습니다. 앞 단 계 문제의 과제물이 완벽하게 작동하지 않으면
+                난이도가 더 높은 문제는 아무리 잘 완료했다 하더라도 평가에
+                반영되지 않습니다.
+              </li>
+              <li>
+                모든 HTML 파일은
+                <a
+                  class="text-underline text-bold"
+                  href="https://validator.w3.org/"
+                  >W3 Validator</a
+                >
+                을 통과해야 합니다.
+              </li>
+              <li>
+                meta 태그의 author에는 본인의 intra ID를 기입해야만 합니다.
+              </li>
+              <li>
+                사용이 금지된 HTML 태그를 사용하는 것은 부정 행위로 간주됩니다.
+                부정 행위는 -42점을 받게 되며, 받은 점수는 절대 조정이
+                불가능합니다.
+              </li>
+              <li>어떠한 형태로든 JavaScript의 사용을 금지합니다.</li>
+              <li>페이지가 열리지 않으면 0점을 받게 됩니다.</li>
+              <li>
+                각 Exercise에서 정한 파일 이외의 어떠한 파일도 디렉토리에 남겨
+                두어서는 안 됩니다.
+              </li>
+              <li>
+                질문이 있으신가요? 오른쪽 동료에게 물어보세요. 아니면 왼쪽
+                동료에게 물어보세요.
+              </li>
+              <li>참고 가이드는 Google...그리고 Google 입니다.</li>
+              <li>
+                예시를 꼼꼼히 살펴보세요. Exercise에서 명시적으로 언급되지 않은
+                세부적인 사항에 대한 힌트를 얻을 수도 있습니다.
+              </li>
+              <li>다같이 한번 외쳐볼까요? "Chick to Chicken~"</li>
+            </ul>
+          </section>
+
           <hr class="horiz-divider" />
-          <h3 class="content__subhead xlarge text-bold">Coding Standard</h3>
-          <h4 class="content__subhead-two large text-bold">HTML Norm</h4>
-          <ul class="content__list">
-            <li>
-              모든 HTML 파일은
-              <a
-                class="text-underline text-bold"
-                href="https://validator.w3.org/"
-                >W3 Validator</a
-              >
-              을 통과해야 합니다.
-            </li>
-            <li>Tab size는 2개의 space로 이루어져야 합니다.</li>
-          </ul>
-          <h4 class="content__subhead-two large text-bold">CSS Norm</h4>
-          <ul class="content__list">
-            <li>Block별로 CSS file을 만들어야 합니다.</li>
-            <li>Tab size는 2개의 space로 이루어져야 합니다.</li>
-            <li>CSS file은 100줄을 넘지 않아야 합니다.</li>
-            <li>
-              모든 block에 적용되는 스타일의 경우 reset.css/layout.css에
-              명시하여야 합니다.
-            </li>
-            <li>CSS 방법론인 BEM 따라야 합니다.</li>
-          </ul>
-          <h4 class="content__subhead-two large text-bold">BEM</h4>
-          <p class="content__para">
-            BEM은 기본적으로 id와 CSS tag가 아닌 class만 사용해야 합니다.
-          </p>
-          <pre><code class="content__code"
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">Coding Standard</h3>
+            <h4 class="content__subhead-two large text-bold">HTML Norm</h4>
+            <ul class="content__list">
+              <li>
+                모든 HTML 파일은
+                <a
+                  class="text-underline text-bold"
+                  href="https://validator.w3.org/"
+                  >W3 Validator</a
+                >
+                을 통과해야 합니다.
+              </li>
+              <li>Tab size는 2개의 space로 이루어져야 합니다.</li>
+            </ul>
+            <h4 class="content__subhead-two large text-bold">CSS Norm</h4>
+            <ul class="content__list">
+              <li>Block별로 CSS file을 만들어야 합니다.</li>
+              <li>Tab size는 2개의 space로 이루어져야 합니다.</li>
+              <li>CSS file은 100줄을 넘지 않아야 합니다.</li>
+              <li>
+                모든 block에 적용되는 스타일의 경우 reset.css/layout.css에
+                명시하여야 합니다.
+              </li>
+              <li>CSS 방법론인 BEM 따라야 합니다.</li>
+            </ul>
+            <h4 class="content__subhead-two large text-bold">BEM</h4>
+            <p class="content__para">
+              BEM은 기본적으로 id와 CSS tag가 아닌 class만 사용해야 합니다.
+            </p>
+            <pre><code class="content__code"
               ><p class="code__line text-bold">.class #test_id { ... } ❌</p>
               <p class="code__line text-bold">.class div { ... } ❌</p>
               <p class="code__line text-bold">.class__test {... } 👌</p></code
             ></pre>
-          <h5 class="content__subhead-three text-bold">Block</h5>
-          <ul class="content__list">
-            <li>
-              block은 문단 전체에 적용된 element 또는 element를 담고 있는
-              컨테이너를 말합니다. ex) logo / login form / menu / search from /
-              content / footer
-            </li>
-          </ul>
-          <pre><code class="content__code"
+            <h5 class="content__subhead-three text-bold">Block</h5>
+            <ul class="content__list">
+              <li>
+                block은 문단 전체에 적용된 element 또는 element를 담고 있는
+                컨테이너를 말합니다. ex) logo / login form / menu / search from
+                / content / footer
+              </li>
+            </ul>
+            <pre><code class="content__code"
             ><p class="code__line text-bold">&lt;div class="header"&gt;</p>
             <p class="code__line text-bold">&nbsp&nbsp&lt;div class="menu"&gt;....&lt;/div&gt;</p>
             <p class="code__line text-bold">&nbsp&nbsp&lt;div class="search"&gt;....&lt;/div&gt;</p>
             <p class="code__line text-bold">&lt;div&gt;</p>
           </code></pre>
-          <h5 class="content__subhead-three text-bold">Element</h5>
-          <ul class="content__list">
-            <li>
-              element는 block 안에서 특정 기능을 수행하는 컴포넌트 입니다.
-              element는 상황에 따라 달라집니다. 각 element는 두 개의 밑줄표시로
-              연결하여 block 다음에 작성합니다.
-            </li>
-          </ul>
-          <pre><code class="content__code"
+            <h5 class="content__subhead-three text-bold">Element</h5>
+            <ul class="content__list">
+              <li>
+                element는 block 안에서 특정 기능을 수행하는 컴포넌트 입니다.
+                element는 상황에 따라 달라집니다. 각 element는 두 개의
+                밑줄표시로 연결하여 block 다음에 작성합니다.
+              </li>
+            </ul>
+            <pre><code class="content__code"
             ><p class="code__line text-bold">.header__logo { … }</p>
             <p class="code__line text-bold">.header__menu { … }</p>
             <p class="code__line text-bold">.header__search { … }</p>
             <p class="code__line text-bold">.header__login { … }</p>
           </code></pre>
-          <ul class="content__list">
-            <li>
-              block 이름이나 element 이름이 길 경우 하이픈(-)으로 연결합니다.
-            </li>
-          </ul>
-          <pre><code class="content__code"
+            <ul class="content__list">
+              <li>
+                block 이름이나 element 이름이 길 경우 하이픈(-)으로 연결합니다.
+              </li>
+            </ul>
+            <pre><code class="content__code"
             ><p class="code__line text-bold">.block-name__element-name</p>
           </code></pre>
-          <h5 class="content__subhead-three text-bold">Modifiers</h5>
-          <ul class="content__list">
-            <li>Modifier는 block 또는 element의 속성입니다.</li>
-            <ul class="content__list--sub-list small">
-              <li>
-                이 속성은 block 또는 element의 외관이나 상태를 변화시킵니다.
-              </li>
-              <li>Class명은 “–“를 추가하여 modifier를 추가하여야 합니다.</li>
+            <h5 class="content__subhead-three text-bold">Modifiers</h5>
+            <ul class="content__list">
+              <li>Modifier는 block 또는 element의 속성입니다.</li>
+              <ul class="content__list--sub-list small">
+                <li>
+                  이 속성은 block 또는 element의 외관이나 상태를 변화시킵니다.
+                </li>
+                <li>Class명은 “–“를 추가하여 modifier를 추가하여야 합니다.</li>
+              </ul>
             </ul>
-          </ul>
-          <pre><code class="content__code"
+            <pre><code class="content__code"
             ><p class="code__line text-bold">.block‐‐modifier { … }</p>
             <p class="code__line text-bold">.block__element--modifier { … }</p>
           </code></pre>
-          <ul class="content__list">
-            <li>
-              탭 메뉴가 다른 영역에서 다른 스타일로 사용된다면 메인 속성을
-              복사하여 추가하여야 합니다.
-            </li>
-          </ul>
-          <pre><code class="content__code"
+            <ul class="content__list">
+              <li>
+                탭 메뉴가 다른 영역에서 다른 스타일로 사용된다면 메인 속성을
+                복사하여 추가하여야 합니다.
+              </li>
+            </ul>
+            <pre><code class="content__code"
             ><p class="code__line text-bold">.header__navigation {</p>
             <p class="code__line text-bold">&nbsp&nbspbackground: #008cba;</p>
             <p class="code__line text-bold">&nbsp&nbsppadding: 1px 0;</p>
             <p class="code__line text-bold">&nbsp&nbspmargin: 2px 0;</p>
             <p class="code__line text-bold">}</p>
           </code></pre>
-          <ul class="content__list">
-            <li>class명이 길다면</li>
-            <ul class="content__list--sub-list small">
-              <li>
-                BEM의 class명은 구체적이고 명료하여 HTML안에서도 읽기 쉬워야
-                합니다.
-              </li>
-              <li>class명이 무엇을 나타내는지 분명하게 전달돼야 합니다.</li>
+            <ul class="content__list">
+              <li>class명이 길다면</li>
+              <ul class="content__list--sub-list small">
+                <li>
+                  BEM의 class명은 구체적이고 명료하여 HTML안에서도 읽기 쉬워야
+                  합니다.
+                </li>
+                <li>class명이 무엇을 나타내는지 분명하게 전달돼야 합니다.</li>
+              </ul>
             </ul>
-          </ul>
+          </section>
+
           <hr class="horiz-divider" />
-          <h3 class="content__subhead xlarge text-bold">42 서울 Honor Code</h3>
-          <p class="content__para large">
-            우리는 헤아릴 수 없이 거대한 우주와 시간의 역사 속에서 찰나의 순간을
-            함께 보내며 경이로운 모험을 하는 여행자들입니다.
-          </p>
-          <ul class="content__list">
-            <li>
-              42 서울인은 개개인이 서로 다름을 인정하고 수용하는 자세를
-              가집니다.
-            </li>
-            <li>
-              42 서울인은 세상의 문제와 변화에 공감하고 참여하여 대안을
-              찾아갑니다.
-            </li>
-            <li>42 서울인은 스스로 선택하고 기회를 만듭니다.</li>
-            <li>
-              42 서울인은 남들보다 뛰어남보다 같이 성장함을 중요하게 생각합니다.
-            </li>
-            <li>
-              42 서울인은 최선을 다한 우리가 세계 최고임에 자부심을 가집니다.
-            </li>
-            <li>42 서울인은 실패를 두려워하지 않으며 실패를 통해 배웁니다.</li>
-            <li>42 서울인은 다른 사람의 건전한 평가를 수용하고 개선합니다.</li>
-            <li>
-              42 서울인은 42 서울 내의 모든 일에 진실하며 책임 의식을 갖습니다.
-            </li>
-            <li>
-              42 서울인은 42 서울과 42 서울인들의 재산을 소중하게 여깁니다.
-            </li>
-          </ul>
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">
+              42 서울 Honor Code
+            </h3>
+            <p class="content__para large">
+              우리는 헤아릴 수 없이 거대한 우주와 시간의 역사 속에서 찰나의
+              순간을 함께 보내며 경이로운 모험을 하는 여행자들입니다.
+            </p>
+            <ul class="content__list">
+              <li>
+                42 서울인은 개개인이 서로 다름을 인정하고 수용하는 자세를
+                가집니다.
+              </li>
+              <li>
+                42 서울인은 세상의 문제와 변화에 공감하고 참여하여 대안을
+                찾아갑니다.
+              </li>
+              <li>42 서울인은 스스로 선택하고 기회를 만듭니다.</li>
+              <li>
+                42 서울인은 남들보다 뛰어남보다 같이 성장함을 중요하게
+                생각합니다.
+              </li>
+              <li>
+                42 서울인은 최선을 다한 우리가 세계 최고임에 자부심을 가집니다.
+              </li>
+              <li>
+                42 서울인은 실패를 두려워하지 않으며 실패를 통해 배웁니다.
+              </li>
+              <li>
+                42 서울인은 다른 사람의 건전한 평가를 수용하고 개선합니다.
+              </li>
+              <li>
+                42 서울인은 42 서울 내의 모든 일에 진실하며 책임 의식을
+                갖습니다.
+              </li>
+              <li>
+                42 서울인은 42 서울과 42 서울인들의 재산을 소중하게 여깁니다.
+              </li>
+            </ul>
+          </section>
         </div>
       </main>
 
