feature/nav : add icon on rush

--- a/pages/rush.html
+++ b/pages/rush.html
@@ -11,11 +11,15 @@
     <link rel="stylesheet" href="../css/project_desktop.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Filled"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
     />
   </head>
 
@@ -48,7 +52,10 @@
         <ul class="subnav__fixed">
           <li class="fixed--title text-bold"><h3>PROJECTS</h3></li>
           <li class="fixed--subject">
-            <a href="day00.html">DAY00</a>
+            <a href="day00.html">
+              <i class="material-icons-outlined md-subnav-icon">egg</i>
+              DAY00</a
+            >
           </li>
           <li class="fixed--subject">
             <a href="day01.html">DAY01</a>
