feature/nav : delete icon on rush

--- a/pages/rush.html
+++ b/pages/rush.html
@@ -52,10 +52,7 @@
         <ul class="subnav__fixed">
           <li class="fixed--title text-bold"><h3>PROJECTS</h3></li>
           <li class="fixed--subject">
-            <a href="day00.html">
-              <i class="material-icons-outlined md-subnav-icon">egg</i>
-              DAY00</a
-            >
+            <a href="day00.html"> DAY00</a>
           </li>
           <li class="fixed--subject">
             <a href="day01.html">DAY01</a>
