feature/nav : add egg icon on each subnav items

--- a/index.html
+++ b/index.html
@@ -39,25 +39,39 @@
             <ul id="subnav--toggle">
               <li class="subnav--toggle__title text-bold"><h3>PROJECTS</h3></li>
               <li class="subnav--toggle__subject">
-                <a href="pages/day00.html">DAY00</a>
+                <a href="pages/day00.html"
+                  ><i class="material-icons md-subnav-icon">egg</i>DAY00</a
+                >
               </li>
               <li class="subnav--toggle__subject">
-                <a href="pages/day01.html">DAY01</a>
+                <a href="pages/day01.html"
+                  ><i class="material-icons md-subnav-icon">egg</i>DAY01</a
+                >
               </li>
               <li class="subnav--toggle__subject">
-                <a href="pages/day02.html">DAY02</a>
+                <a href="pages/day02.html"
+                  ><i class="material-icons md-subnav-icon">egg</i>DAY02</a
+                >
               </li>
               <li class="subnav--toggle__subject">
-                <a href="pages/day03.html">DAY03</a>
+                <a href="pages/day03.html"
+                  ><i class="material-icons md-subnav-icon">egg</i>DAY03</a
+                >
               </li>
               <li class="subnav--toggle__subject">
-                <a href="pages/day04.html">DAY04</a>
+                <a href="pages/day04.html"
+                  ><i class="material-icons md-subnav-icon">egg</i>DAY04</a
+                >
               </li>
               <li class="subnav--toggle__subject">
-                <a href="pages/day05.html">DAY05</a>
+                <a href="pages/day05.html"
+                  ><i class="material-icons md-subnav-icon">egg</i>DAY05</a
+                >
               </li>
               <li class="subnav--toggle__subject">
-                <a href="pages/rush.html">RUSH</a>
+                <a href="pages/rush.html"
+                  ><i class="material-icons md-subnav-icon">egg</i>RUSH</a
+                >
               </li>
             </ul>
           </li>
