--- a/pages/day01.html
+++ b/pages/day01.html
@@ -48,25 +48,39 @@
         <ul class="subnav__fixed">
           <li class="fixed--title text-bold"><h3>PROJECTS</h3></li>
           <li class="fixed--subject">
-            <a href="day00.html">DAY00</a>
+            <a href="day00.html"
+              ><i class="material-icons md-subnav-icon">egg</i>DAY00</a
+            >
           </li>
           <li class="fixed--subject fixed--subject--active">
-            <a href="day01.html">DAY01</a>
+            <a href="day01.html"
+              ><i class="material-icons md-subnav-icon">egg</i>DAY01</a
+            >
           </li>
           <li class="fixed--subject">
-            <a href="day02.html">DAY02</a>
+            <a href="day02.html"
+              ><i class="material-icons md-subnav-icon">egg</i>DAY02</a
+            >
           </li>
           <li class="fixed--subject">
-            <a href="day03.html">DAY03</a>
+            <a href="day03.html"
+              ><i class="material-icons md-subnav-icon">egg</i>DAY03</a
+            >
           </li>
           <li class="fixed--subject">
-            <a href="day04.html">DAY04</a>
+            <a href="day04.html"
+              ><i class="material-icons md-subnav-icon">egg</i>DAY04</a
+            >
           </li>
           <li class="fixed--subject">
-            <a href="day05.html">DAY05</a>
+            <a href="day05.html"
+              ><i class="material-icons md-subnav-icon">egg</i>DAY05</a
+            >
           </li>
           <li class="fixed--subject">
-            <a href="rush.html">RUSH</a>
+            <a href="rush.html"
+              ><i class="material-icons md-subnav-icon">egg</i>RUSH</a
+            >
           </li>
         </ul>
       </div>
